plugins {
    id 'java'
    id 'io.spring.dependency-management' version '1.0.1.RELEASE'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21) // Ensure you're targeting the correct Java version
    }
}

group 'java.examples'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.json:json:20231013'
}

tasks.withType(JavaCompile) {
    options.compilerArgs += ['--enable-preview']
}

tasks.withType(Test) {
    jvmArgs += '--enable-preview'
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}

